disable default Minio SSE; fix file upload

--- a/.env.example
+++ b/.env.example
@@ -85,6 +85,18 @@ LOCAL_STORAGE_PATH=/opt/arkfile/var/lib/${ENV}/minio/data
 MINIO_ROOT_USER=minioadmin    # Override default MinIO credentials if needed
 MINIO_ROOT_PASSWORD=minioadmin # Override default MinIO credentials if needed
 
+# Server-Side Encryption (SSE) Configuration for MinIO
+#
+# Arkfile performs end-to-end (E2E) encryption on the client-side before upload.
+# To ensure the server-verified SHA256 hash matches the final on-disk hash,
+# MinIO's automatic SSE must be disabled. This is the recommended default.
+#
+# If you integrate an external Key Management Service (KMS) with MinIO and
+# wish to enable SSE, you can remove or comment out this line and configure
+# MinIO's SSE variables (e.g., MINIO_KMS_KES_ENDPOINT). Be aware that this
+# will cause the on-disk hash to differ from the Arkfile application hash.
+MINIO_SSE_AUTO_ENCRYPTION=off
+
 # MinIO Cluster Configuration (when STORAGE_PROVIDER=cluster)
 MINIO_CLUSTER_NODES=localhost:9000           # Comma-separated list of node addresses
 MINIO_CLUSTER_ACCESS_KEY=your_cluster_key    # Cluster authentication
