--- a/client/static/js/package.json
+++ b/client/static/js/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "build": "bun build src/app.ts --outdir dist --target browser",
-    "build:watch": "bun build src/app.ts --outdir dist --target browser --watch",
+    "build": "bun build src/app.ts --outdir dist --target browser --format iife",
+    "build:watch": "bun build src/app.ts --outdir dist --target browser --format iife --watch",
     "type-check": "bun tsc --noEmit",
     "test": "bun test",
     "test:watch": "bun test --watch",
@@ -15,8 +15,8 @@
     "lint": "bun tsc --noEmit && echo '✅ TypeScript checks passed'",
     "test:unit": "bun test tests/unit/",
     "test:all": "bun test",
-    "build:dev": "bun build src/app.ts --outdir dist --target browser --sourcemap",
-    "build:prod": "bun build src/app.ts --outdir dist --target browser --minify --sourcemap=external"
+    "build:dev": "bun build src/app.ts --outdir dist --target browser --format iife --sourcemap",
+    "build:prod": "bun build src/app.ts --outdir dist --target browser --format iife --minify --sourcemap=external"
   },
   "devDependencies": {
     "bun-types": "^1.2.21",
