--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ arkfile-test.db
 # WASM build artifacts
 client/main.wasm
 client/static/*.wasm
+client/wasm_exec.js
+client/static/wasm_exec.js
 *.wasm
 
 # Test artifacts and generated files
