--- a/client/static/js/package.json
+++ b/client/static/js/package.json
@@ -21,5 +21,7 @@
     "bun-types": "^1.2.21",
     "typescript": "^5.9.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@noble/hashes": "^2.0.1"
+  }
 }
