--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "rootDir": "./client/static/js/src",
     "noImplicitAny": true,
     "strictNullChecks": true,
     "noImplicitReturns": true,
@@ -24,7 +23,8 @@
   },
   "include": [
     "client/static/js/src/**/*",
-    "client/static/js/src/types/**/*.d.ts"
+    "client/static/js/src/types/**/*.d.ts",
+    "config/argon2id-params.json"
   ],
   "exclude": [
     "node_modules",
