--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ DOMAIN=arkfile.net
 
 # Service Configuration
 PORT=8080
+CORS_ALLOWED_ORIGINS=http://localhost:8080,https://localhost:8443
 BASE_DIR=/opt/arkfile
 SERVICE_USER=arkfile
 
@@ -77,7 +78,7 @@ REQUIRE_APPROVAL=true
 # Storage size is tracked in bytes for all uploaded files
 
 # Storage Configuration
-# Supported providers: local, cluster, backblaze, wasabi, vultr, aws-s3
+# Supported providers: local, cluster, backblaze, cloudflare-r2, wasabi, vultr, aws-s3
 STORAGE_PROVIDER=local  # Choose provider type (default: local for demo)
 
 # Local Storage Configuration (when STORAGE_PROVIDER=local)
@@ -116,10 +117,17 @@ S3_ACCESS_KEY_ID=your_key_id
 S3_SECRET_KEY=your_secret_key
 S3_BUCKET_NAME=your_bucket_name  # e.g., arkfile-prod or arkfile-test
 
+# Cloudflare R2 Configuration (when STORAGE_PROVIDER=cloudflare-r2)
+CLOUDFLARE_ENDPOINT=https://<accountid>.r2.cloudflarestorage.com
+CLOUDFLARE_ACCESS_KEY_ID=your_access_key_id
+CLOUDFLARE_SECRET_ACCESS_KEY=your_secret_access_key
+CLOUDFLARE_BUCKET_NAME=your_bucket_name
+
 # Provider-specific notes:
 # Local: Uses MinIO in filesystem mode for local storage
 # Cluster: Uses MinIO in distributed mode across multiple nodes
 # AWS S3: Uses native Amazon S3, endpoint auto-generated as s3.[region].amazonaws.com
+# Cloudflare R2: Uses S3-compatible API with account-specific endpoint
 # Backblaze: Only S3_ENDPOINT needs to be set manually
 # Wasabi: Requires S3_REGION, endpoint auto-generated as s3.[region].wasabi.com
 # Vultr: Requires S3_REGION, endpoint auto-generated as [region].vultrobjects.com
