--- a/Caddyfile
+++ b/Caddyfile
@@ -33,8 +33,8 @@
 		X-XSS-Protection "1; mode=block"
 		# Prevent MIME-sniffing
 		X-Content-Type-Options "nosniff"
-		# CSP
-		Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline';"
+		# CSP - includes wasm-unsafe-eval for OPAQUE WebAssembly and data:/blob: for WASM loading
+		Content-Security-Policy "default-src 'self'; script-src 'self' 'wasm-unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src 'self' data: blob:;"
 		# Restrict referrer information
 		Referrer-Policy "strict-origin-when-cross-origin"
 	}
